--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "xidoorutas_informativa",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
   "dependencies": {
     "@astrojs/tailwind": "^5.0.0",
     "astro": "^3.0.10",
     "tailwindcss": "^3.0.24",
     "tailwindcss-animated": "^1.0.1"
-  }
+  },
+  "license": "MIT",
+  "name": "xidoorutas_informativa",
+  "scripts": {
+    "astro": "astro",
+    "build": "astro build",
+    "dev": "astro dev",
+    "preview": "astro preview",
+    "start": "astro dev"
+  },
+  "type": "module",
+  "version": "0.0.1"
 }
